# metastasis-prediction-api

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.envs/: .dataset_gcp_project  .mlflow_dev
docker/: Dockerfile
docker/scripts/: run-server.sh
metastatic/: server.py
metastatic/config_schemas/: config_schema.py  model_selector_schemas.py
metastatic/config_schemas/dask_schemas/: gcp_cluster_schema.py
metastatic/config_schemas/infrastructure_schemas/: mlflow_data_schema.py
metastatic/config_schemas/pipeline_schemas/: dimension_reduction_schemas.py  gene_mutation_transformer_schema.py  model_schemas.py  pipeline_config_schema.py  resampler_schema.py  scaler_schemas.py  vectorizer_schemas.py
metastatic/configs/: config.yaml
metastatic/configs/dask_cluster/: gcp_dask_cluster.yaml
metastatic/configs/experiment/: sweep_no_smote.yaml  sweep_with_smote_linear_svc.yaml  sweep_with_smote_lr.yaml
metastatic/counter_dir/: gene_mut_counter.pkl
metastatic/datasets/: X_test_liver_all.csv  X_train_liver_all.csv  y_test_liver_all.csv  y_train_liver_all.csv
metastatic/model_selection/: model_selector.py
metastatic/pipelines/: base_pipeline.py  single_model_pipeline.py
metastatic/preprocess/: gene_mutation_transformer.py
metastatic/utils/: data_utils.py  gcp_utils.py  io_utils.py  utils.py
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat
scripts/: create-server.sh  startup-script.sh
